# daily-briefing-agent

./: README.md  index.html  setup-guide.html
starter/: FINISH-ON-YOUR-OWN.md  README.md  config.yaml  env.example  gitignore  pyproject.toml
starter/sample_data/: collected_data.json
starter/scripts/: setup_google_auth.py
starter/src/ea_workshop/: __init__.py  config.py  models.py  run.py  synthesizer.py
starter/src/ea_workshop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
starter/src/ea_workshop/collectors/: __init__.py  google_live.py
starter/src/ea_workshop/writers/: markdown.py
